welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:24: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ColumnByColumn:27: error: expected start of definition
	override def forward()  {
                 ^ColumnByColumn:30: error: expected start of definition
	override def backward(i:Int) {
                 ^ColumnByColumn:33: error: expected start of definition
	override def backward() {
                 ^ColumnByColumn:36: error: Unmatched closing brace '}' ignored here
}
^